<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:text="@string/autoryzacja_mojedane"
        android:layout_height="50dp"
		android:background="@drawable/button_inapp"
		android:textColor="#fff" />

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:text="@string/autoryzacja_zmienhaslo"
        android:layout_height="50dp"
		android:background="@drawable/button_inapp"
		android:textColor="#fff" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:text="@string/autoryzacja_wyloguj"
        android:layout_height="50dp"
		android:background="@drawable/button_inapp"
		android:textColor="#fff" />

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:text="@string/autoryzacja_usunkonto"
        android:layout_height="50dp"
		android:background="@drawable/button_inapp"
		android:textColor="#fff" />

</LinearLayout>