<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/sos_message1"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_inapp"
        android:text="@string/wiadomosc1"
        android:textColor="#fff" />

    <Button
        android:id="@+id/sos_message2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_inapp"
        android:text="@string/wiadomosc2"
        android:textColor="#fff" />

    <Button
        android:id="@+id/sos_message3"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_inapp"
        android:text="@string/wiadomosc3"
        android:textColor="#fff" />

</LinearLayout>