<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/action_group.name"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/input"
        android:ems="10"
        android:gravity="center"
        android:inputType="textEmailAddress"
        android:text="@string/TMP_group_name"
        android:textColor="#000" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/action_group.password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/input"
        android:ems="10"
        android:gravity="center"
        android:inputType="textPassword"
        android:text="@string/TEMP_email"
        android:textColor="#000" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/action_group.ok"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/button_inapp"
        android:text="@string/OK"
        android:textColor="#fff" />

</LinearLayout>